@@ -3,6 +3,19 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- consistent formatting for mode files
+- foo = bar does not work
+- bufferResponseDockable API?
+  - buffer not loaded stage
+  - buffer mode change
+  - buffer content change
+  - all call an 'update()' method
+  - use for fold navigator
+- detached dockables
+- context option pane: "smart options"?
+- gutter options: add option to completely hide gutter
+- each view needs to store its own docking area divider locations
+- buffer tab size property broken
 - scroll jump on click is a real problem
 - store anchors in sorted order for factor of two improvement
 - expand: scroll to end of fold if possible
@@ -200,6 +213,9 @@ org.gjt.sp.jedit.gui.PanelWindowContainer.show(PanelWindowContainer.java:200)
 
 + performance:
 
+- jEdit.getAction(): is a linear scan through up to 100+ action sets
+- jEdit.getBuffer(): same
+- action bar's completion
 - display manager should not be O(n^2) with text areas
 - to paint collapsed lines counter: use chunk cached value if possible
 - menu drag: slow
